objects/L2O_ContractPathUpdate__mdt.object
<CustomObject>
    <description>To contain all the customized value sets for the Contract Path LWC.</description>
    <fields>
        <fullName>L2O_DirectContNo_EmpBsnNo__c</fullName>
        <inlineHelpText>Direct Contract = No &amp; Direct Emp Business = No</inlineHelpText>
        <label>L2O_DirectContNo_EmpBsnNo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_DirectContYes_EmpBsnNo__c</fullName>
        <inlineHelpText>Direct Contract = Yes &amp; Employer Business = No.</inlineHelpText>
        <label>L2O_DirectContYes_EmpBsnNo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_DirectContYes_EmpBsnYes__c</fullName>
        <inlineHelpText>Direct Contract = Yes &amp; Employer Business = Yes.</inlineHelpText>
        <label>L2O_DirectContYes_EmpBsnYes</label>
        <type>TextArea</type>
    </fields>
    <label>L2O_ContractPath</label>
    <pluralLabel>L2O_ContractPaths</pluralLabel>
</CustomObject>